--- a/CommentsApp/Resources/en.lproj/Localizable.strings
+++ b/CommentsApp/Resources/en.lproj/Localizable.strings
@@ -2,7 +2,7 @@
   Localizable.strings
   CommentsApp
 
-  Created by Admin on 25.11.2022.
+Created by Vladyslav on 23.11.2022.
   
 */
 /* - Main View */
